Fixed : Images were overflown in Chrome and Edge browsers

--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,7 @@ code {
 }
 
 img {
+  width: 100%;
+  height: 100%;
   border-radius: 6px;
-} 
+}
